--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       .jumbotron {
-  background-image: url("../IMG/nerv01.jpg");
+  background-image: url("../IMG/UNIT02.jpg");
   background-size: cover;
 }
       <h1 class="display-3">A Warm Welcome!</h1>
