--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
 
   <!-- Page Content -->
   <div class="container">
+    
+     <!--  -->
+    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 
     <!-- Jumbotron Header -->
-    .jumbotron {
-  background-image: url("/IMG/UNIT02.jpg");
-  background-size: cover;
-}
     <header class="jumbotron my-4">
 
       <h1 class="display-3">A Warm Welcome!</h1>
