--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Daniel Fandino and the American Conventions Project 2019</p>
     </div>
     <!-- /.container -->
   </footer>
