--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 
     <!-- Jumbotron Header -->
+    <div class="container">
     <header class="jumbotron my-4">
 
       <h1 class="display-3">A Warm Welcome!</h1>
