--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <h1 class="display-3">A Warm Welcome!</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
     </header>
+    </div>
 
     <!-- Page Features -->
 
