--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 </nav>	
 <!-- Page Content -->
 
-<div class="container"><!-- Jumbotron Header -->
-<header class="jumbotron my-4">
+<!-- Jumbotron Header -->
+
 <h1 class="display-3">About the American Conventions project</h1>
 <img src="http://tokyo6420.com/images/CHI1.jpg" style="float: left; width:400px;" />
 
