--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#">Introduction</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
