--- a/about.html
+++ b/about.html
@@ -19,11 +19,10 @@
     
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-<div class="container"><a class="navbar-brand" href="#">Tokyo 6420</a><button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"></button>
+<div class="container"><a class="navbar-brand" href="#">American Conventions</a><button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"></button>
 <div class="collapse navbar-collapse" id="navbarResponsive">
 <ul class="navbar-nav ml-auto">
 	<li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span> </a></li>
-	<li class="nav-item"><a class="nav-link" href="http://olympicblog.tokyo6420.com/">Olympic Blog</a></li>
 	<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 	<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>    
 </ul>
