--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://fandinod.github.io/americanconventions/about">About</a>
+           <li class="nav-item">
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/about">Introduction</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/mapping">Mapping Fandom</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Introduction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/contact">Contact</a>
           </li>
         </ul>
       </div>
