--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <!-- Jumbotron Header -->
 
 <h1 class="display-5">About the American Conventions project</h1>
-<img src="http://tokyo6420.com/images/CHI1.jpg" style="float: left; width:400px;" />
+<img src="http://tokyo6420.com/images/CHI1.jpg" style="padding: 0 15px; float: left; width:400px;" />
 div {
   padding-left: 20px;
 }
