--- a/introduction.html
+++ b/introduction.html
@@ -29,6 +29,39 @@
 </div>
 </nav>	
 <!-- Page Content -->
+	<p>Conventions have become...
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		
+		Text text text
+		Text text text
+		Text text text
+		
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		Text text text
+		
+		Text text text
+		Text text text
+		
+		
+	</p>
 
 <!-- Jumbotron Header -->
 
