--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ var bounds = [
 
 var map = new mapboxgl.Map({
     container: 'map',
-    https://api.mapbox.com/styles/v1/fandinod/cjsy0cmo81t8d1fqpbfgpgbq5.html?fresh=true&title=true&access_token=pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ#13.2/40.721642/-73.990029/0,
+    style" 'https://api.mapbox.com/styles/v1/fandinod/cjsy0cmo81t8d1fqpbfgpgbq5.html?fresh=true&title=true&access_token=pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ#13.2/40.721642/-73.990029/0',
     center: [139.8231, 35.7014],
     zoom: 8,
     maxBounds: bounds // Sets bounds as max
