--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
     
     <!-- The following is Mapbox code -->
 
-<div id='map' style='width: 1100px; height: 300px; bottom: 10px'></div>
+<div id='map' style='width: 1100px; height: 600px; bottom: 10px'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ';
 
-// Set bounds to Tokyo
+// Set bounds to USA
 var bounds = [
-    [139.6605422381296, 35.660669906226914], // Southwest coordinates
-    [139.8231711604625, 35.701455347398365]  // Northeast coordinates
+    [23.03929775, -124.67285156], // Southwest coordinates
+    [49.92293545, -65.69824219]  // Northeast coordinates
 ];
 
 var map = new mapboxgl.Map({
