--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ var bounds = [
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/fandinod/cjsy0cmo81t8d1fqpbfgpgbq5',
-    center: [139.8231, 35.7014],
+    center: [41.17038448, -95.85571289],
     zoom: 8,
     maxBounds: bounds // Sets bounds as max
 });
