--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ
 
 // Set bounds to USA
 var bounds = [
-    [23.03929775, -124.67285156], // Southwest coordinates
-    [49.92293545, -65.69824219]  // Northeast coordinates
+    [-122.931425888, 24.342126192], // Southwest coordinates
+    [65.7972437393, 49.0693273344],  // Northeast coordinates
 ];
 
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/fandinod/cjsy0cmo81t8d1fqpbfgpgbq5',
-    center: [41.17038448, -95.85571289],
+    center: [96.310117028, 41.7603055706],
     zoom: 8,
     maxBounds: bounds // Sets bounds as max
 });
