--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- Jumbotron Header -->
     <div class="container">
-    <header class="jumbotron my-4">
+    <header class="jumbotron my-2">
 
       <h1 class="display-3">Map goes here!</h1>
     </header>
@@ -126,8 +126,8 @@ var geojson = {
       coordinates: [139.6999, 35.6673]
     },
     properties: {
-      title: 'National Gymnasium and Annex',
-        description: '<strong>Swimming, diving and basketball venue</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">National Gymnasium and Annex</a>',
+      title: 'A-Kon',
+        description: '<strong>First anime convention in the United States</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">National Gymnasium and Annex</a>',
     }
   },
   {
