--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@ geojson.features.forEach(function(marker) {
   <!-- /.container -->
 
   <!-- Footer -->
-      <p class="m-0 text-center text-white">Copyright &copy; Daniel Fandino and the American Conventions Project 2019</p>
-    <!-- /.container -->
-  </footer>
+    
+    
+    <footer class="py-5 bg-dark">
+          <p class="m-0 text-center text-white">Copyright &copy; Daniel Fandino and the American Conventions Project 2019</p>
+   </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
