--- a/introduction.html
+++ b/introduction.html
@@ -65,11 +65,12 @@
 <!-- Jumbotron Header -->
 
 
-<img src="http://tokyo6420.com/images/CHI1.jpg" style="float: left; width:400px;" />
+<img src="http://tokyo6420.com/images/CHI1.jpg" style="float: left; width:200px;" />
 
-<p class="lead">Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture and technology.  He is one of the editors Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume Virtual Dark Tourism: Ghost Roads.
+<p class="lead">Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture and technology.  He is one of the editors Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume Virtual Dark Tourism: Ghost Roads.</p>
 <br>
-</p>
+	<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University.</> 
+
 </header>        
 
 </body>
