--- a/introduction.html
+++ b/introduction.html
@@ -35,7 +35,9 @@
 		Text text text
 		Text text text
 		Text text text
-		Text text text
+		This project focuses on 1990 to 2000, the heady preinternet days where. Conventions were liminal spaces
+		designed and developed. Certain conventions of the convention evolved over time, spring from and the tradition
+		of science fiction and trade conventions extant in the United States.
 		Text text text
 		Text text text
 		<br>
