--- a/introduction.html
+++ b/introduction.html
@@ -67,7 +67,7 @@
 <!-- Jumbotron Header -->
 
 
-<img src="http://tokyo6420.com/images/CHI1.jpg" style="float: left; width:200px;" />
+<img src="http://tokyo6420.com/images/CHI1.jpg" hspace="20" style="float: left; width:200px;" />
 
 		<p>Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture and technology.  He is one of the editors Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume Virtual Dark Tourism: Ghost Roads.</p>
     <br>
