--- a/introduction.html
+++ b/introduction.html
@@ -77,4 +77,10 @@
 
 </header>        
 
+	    <footer class="py-1 bg-dark">
+          <p class="m-0 text-center text-white">Copyright &copy; Daniel Fandino and the American Conventions Project 2019</p>
+</footer>
+	
+	
+	
 </body>
