--- a/introduction.html
+++ b/introduction.html
@@ -29,7 +29,7 @@
 </div>
 </nav>	
 <!-- Page Content -->
-	<h1 class="display-5">About the American Conventions project</h1>
+	<h1 class="display-5">Introduction to the American Conventions project</h1>
 	<p>Conventions have become...
 		Text text text
 		Text text text
@@ -70,14 +70,13 @@
 <img src="http://tokyo6420.com/images/CHI1.jpg" hspace="20" style="float: left; width:200px;" />
 
 		<p>Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture and technology.  He is one of the editors Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume Virtual Dark Tourism: Ghost Roads.</p>
-    <br>
 		<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University.</> 
-			<br>
-			<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p?
+		<br>
+		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p?
 
 </header>        
 
-	    <footer class="py-1 bg-dark">
+<footer class="py-1 bg-dark">
           <p class="m-0 text-center text-white">Copyright &copy; Daniel Fandino and the American Conventions Project 2019</p>
 </footer>
 	
