--- a/introduction.html
+++ b/introduction.html
@@ -64,8 +64,8 @@
 		Text text text
 	</p>
 
-<!-- Jumbotron Header -->
 
+<h1 class="display-5">Introduction to the American Conventions project</h1>
 
 <img src="http://tokyo6420.com/images/CHI1.jpg" hspace="20" style="float: left; width:200px;" />
 
