--- a/introduction.html
+++ b/introduction.html
@@ -69,7 +69,7 @@
 
 <img src="http://tokyo6420.com/images/CHI1.jpg" hspace="20" style="float: left; width:200px;" />
 
-		<p>Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture and technology.  He is one of the editors of <i>Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains</i>. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume <i>Virtual Dark Tourism: Ghost Roads</i>.</p>
+		<p>Daniel Fandino is a PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture, and the role of nationalism and technology in the making of Japan in the American imagination.  He is one of the editors of <i>Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains</i>. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume <i>Virtual Dark Tourism: Ghost Roads</i>.</p>
 		<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University.</> 
 		<br>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p?
