--- a/introduction.html
+++ b/introduction.html
@@ -41,6 +41,9 @@
 		Text text text
 		Text text text
 		<br>
+<!----Timeline JS---->
+	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+<!----Timeline JS---->
 		Text text text
 		Text text text
 		Text text text
