--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
     <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 
     <!-- Jumbotron Header -->
-    <div class="container">
-    <header class="jumbotron my-2">
+   
+    <header class="py-1 bg-dark">
 
-      <h1 class="display-3">Map goes here!</h1>
+      <p>American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+</p>
     </header>
-    </div>
+ 
 
     <!-- Page Features -->
     
