--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    
     <header class="py-1 bg-dark">
 
-      <p>American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+      <p class="m-0 text-center text-white">>American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 </p>
     </header>
  
