--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="container">
     
      <!--  -->
-    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+    <p class="lead"American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 
     <!-- Jumbotron Header -->
    
