--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
 
   <!-- Page Content -->
   <div class="container">
-    
-     <!--  -->
-    <p class="lead"American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+   
 
-    <!-- Jumbotron Header -->
    
     <header class="py-1 bg-dark">
 
@@ -97,7 +94,7 @@
     
     <!-- The following is Mapbox code -->
 
-<div id='map' style='width: 1200px; height: 500px; bottom: 10px'></div>
+<div id='map' style='width: 1200px; height: 500px; top: 10px; bottom: 10px'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ';
