--- a/index.html
+++ b/index.html
@@ -79,15 +79,19 @@
   </nav>
 
   <!-- Page Content -->
+  <!-- Page Content -->
   <div class="container">
-   
+    
+     <!--  -->
+    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 
+    <!-- Jumbotron Header -->
    
     <header class="py-1 bg-dark">
 
       <p class="m-0 text-center text-white">>American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 </p>
-    </header>
+</header>
  
 
     <!-- Page Features -->
