--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    
     <header class="py-1 bg-dark">
 
-      <p class="m-0 text-center text-white"; top 10px> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+      <p class="m-0 text-center text-white"> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
 </p>
 </header>
  
@@ -98,7 +98,7 @@
     
     <!-- The following is Mapbox code -->
 
-<div id='map' style='width: 1000px; height: 500px; top: 10px; bottom: 10px'></div>
+<div id='map' style='width: 1100px; height: 500px; top: 10px; bottom: 10px'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ';
