--- a/introduction.html
+++ b/introduction.html
@@ -30,14 +30,9 @@
 </nav>	
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
-	<p>Conventions have become...
-		Text text text
-		Text text text
-		Text text text
-		Text text text
-		This project focuses on 1990 to 2000, the heady preinternet days where. Conventions were liminal spaces
-		designed and developed. Certain conventions of the convention evolved over time, spring from and the tradition
-		of science fiction and trade conventions extant in the United States.
+	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady preinternet days where conventions offered a liminal space for fans to interact with like minded individuals over shared interests.
+		designed and developed. Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings extant in the United States and introducing new concepts springing from the particular needs and of anime fandom. This included a bent towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay. 
+		
 		Text text text
 		Text text text
 		<br>
