--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         body { margin:0; padding:0; }
         
        .marker {
-            background-image: url('https://tokyo6420.com/olympicicon2.png');
+            background-image: url('https://github.com/fandinod/americanconventions/IMG/noun_fuji_796172.png');
             background-size: cover;
             width: 30px;
             height: 30px;
