--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         body { margin:0; padding:0; }
         
        .marker {
-            background-image: url('https://github.com/fandinod/americanconventions/IMG/noun_fuji_796172.png');
+            background-image: url('https://fandinod.github.io/americanconventions/IMG/noun_fuji_796172.png');
             background-size: cover;
             width: 30px;
             height: 30px;
@@ -129,7 +129,7 @@ var geojson = {
     },
     properties: {
       title: 'A-Kon',
-        description: '<strong>First anime convention in the United States</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">National Gymnasium and Annex</a>',
+        description: '<strong>First anime convention in the United States</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">A-Kon</a>',
     }
   },
   {
