--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         body { margin:0; padding:0; }
         
        .marker {
-            background-image: url('https://fandinod.github.io/americanconventions/IMG/noun_fuji_icon.png');
+            background-image: url('https://fandinod.github.io/americanconventions/IMG/noun_fuji_icon.jpg');
             background-size: cover;
             width: 30px;
             height: 30px;
