--- a/introduction.html
+++ b/introduction.html
@@ -30,12 +30,9 @@
 </nav>	
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
-	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady preinternet days where conventions offered a liminal space for fans to interact with like minded individuals over shared interests.
-		designed and developed. Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings extant in the United States and introducing new concepts springing from the particular needs and of anime fandom. This included a bent towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay. 
-		
-		Text text text
-		Text text text
-		<br>
+	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
+		Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings already extant in the United States and introducing new concepts springing from the particular needs and interests of anime fandom. This included a bend towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay.
+	<br>
 <!--Timeline JS-->
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
