--- a/introduction.html
+++ b/introduction.html
@@ -41,7 +41,7 @@
 		Text text text
 		Text text text
 		<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png"; width:500px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" hspace="20" style="float: left; width:500px;" />
 		Text text text
 		Text text text
 		Text text text
