--- a/introduction.html
+++ b/introduction.html
@@ -36,10 +36,11 @@
 <!--Timeline JS-->
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
-		Text text text
-		Text text text
-		Text text text
-		Text text text
+	Why Study Conventions?
+	<p>Popular culture is often conceived as disposable, often only rising to public attention when monetary value is attached to popular culture objects such as the recent interest in superhero comics. Yet the basis of modern fandom was built in the halls of early conventions. Like in the early internet, identities are negotiated, fans engaged with each other, knowledge exchanged, all under the banner of a imagined Japan. This process has not been chronicled or archived in a systematic manner.</p> 
+<br>
+<p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. As Donald Lowe argues, history is not the past but rather a representation of the past.</p> 
+
 		<br>
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" hspace="20" style="float: middle; width:800px;" />
 		<br>
