--- a/introduction.html
+++ b/introduction.html
@@ -42,7 +42,8 @@
 <p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. As Donald Lowe argues, history is not the past but rather a representation of the past.</p> 
 
 		<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" hspace="20" style="float: middle; width:800px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" hspace="20" style="float: left; width:800px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" hspace="20" style="float: right; width:800px;" />
 		<br>
 		Text text text
 		Text text text
