--- a/introduction.html
+++ b/introduction.html
@@ -44,7 +44,7 @@
 		<br>
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" hspace="20" style="float: left; width:800px;" />
 	<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" hspace="20" style="float: right; width:800px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" hspace="20" style="float: left; width:800px;" />
 	<br>
 		Text text text
 		Text text text
