--- a/introduction.html
+++ b/introduction.html
@@ -42,9 +42,9 @@
 <p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. As Donald Lowe argues, history is not the past but rather a representation of the past.</p> 
 
 		<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" "style="float: left; width:800px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" style="float: left; width:800px;" />
 	<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" "style="float: left; width:800px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" style="float: left; width:800px;" />
 	<br>
 		Text text text
 		Text text text
