--- a/introduction.html
+++ b/introduction.html
@@ -87,6 +87,10 @@
 	<br>
 	<br>	
 
+The Ephemera of Conventions
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_cover.png" style="float: left; clear: right; width:300px;" />
+	
+	
 	</p>
 
 
