--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var geojson = {
     },
     properties: {
       title: 'A-Kon',
-        description: '<strong>First anime convention in the United States</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">A-Kon</a>',
+        description: '<strong>First anime convention in the United States</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">A-Kon</a>',
     }
   },
   {
