--- a/mapping.html
+++ b/mapping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><meta name="description" content=""><meta name="author" content="">
-	<title>American Convention - A Digital Humanities Project</title>
+	<title>American Conventions - A Digital Humanities Project</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" /><!-- Custom styles for this template -->
 	<link href="css/heroic-features.css" rel="stylesheet" />
@@ -29,12 +29,7 @@
 </div>
 </nav>	
 <!-- Page Content -->
-	<h1 class="display-5">Introduction to the American Conventions project</h1>
-	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
-		Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings already extant in the United States and introducing new concepts springing from the particular needs and interests of anime fandom. This included a bend towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay.
-	<br>
-
-	
+	<h1 class="display-5">Mapping Fandom</h1>
 	
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" style="float: left; clear: right; width:800px;" />
 	<br>
