--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@ var geojson = {
     type: 'Feature',
     geometry: {
       type: 'Point',
-      coordinates: [139.7717, 35.6804]
+      coordinates: [-118.1937, 33.7701]
     },
     properties: {
-      title: 'Nihonbashi',
-        description: '<strong>The Nihonbashi Bridge, former center of Tokyo</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">Nihonbashi Bridge</a>',
+      title: 'Anime Expo',
+        description: '<strong>Anime Expo, as of 2016 the largest anime convention in the United States</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Central</a>',
     }
   },
      {
