--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@ var geojson = {
     type: 'Feature',
     geometry: {
       type: 'Point',
-      coordinates: [139.7170, 35.6745]
+      coordinates: [-41.8781, 87.6298]
     },
     properties: {
-      title: 'Meiji Jingu Stadium',
-      description: '<strong>Baseball stadium</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">Meiji Jinju Stadium</a>',
+      title: 'Anime Central',
+      description: '<strong>Anime Central</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Central</a>',
     }
   }]
 };
