--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ var geojson = {
     type: 'Feature',
     geometry: {
       type: 'Point',
-      coordinates: [139.7499, 35.6933]
+      coordinates: [-81.3792, 28.5383]
     },
     properties: {
-      title: 'Nippon Bukodan',
-        description: '<strong>Judo venue</strong><br><a href=\"http://tokyo6420.com/nationalgym.html" target=\"_blank\" title=\"Opens in a new window\">Nippon Bukodan</a>',
+      title: 'Anime Festival Orlando',
+        description: '<strong>Judo venue</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Festival Orlando, 1999</a>',
     }
      },
      {
