--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ var geojson = {
     },
     properties: {
       title: 'Anime Festival Orlando',
-        description: '<strong>Judo venue</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Festival Orlando, 1999</a>',
+        description: '<strong>Anime Festival Orlando, 1999</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Festival Orlando</a>',
     }
      },
      {
