--- a/index.html
+++ b/index.html
@@ -143,6 +143,17 @@ var geojson = {
         description: '<strong>Anime Expo, as of 2016 the largest anime convention in the United States</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Central</a>',
     }
   },
+               {
+    type: 'Feature',
+    geometry: {
+      type: 'Point',
+      coordinates: [-118.1937, 33.7701]
+    },
+    properties: {
+      title: 'Anime Weekend Atlanta',
+        description: '<strong>Anime Weekend Atlanta</strong><br><a href=\"" target=\"_blank\" title=\"Opens in a new window\">Anime Weekend Atlanta</a>',
+    }
+  },
      {
     type: 'Feature',
     geometry: {
