--- a/introduction.html
+++ b/introduction.html
@@ -37,9 +37,7 @@
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
 	
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" style="float: left; clear: right; width:800px;" />
-	<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" style="float: left; clear: right; width:800px;" />
+		What is a convention? Yamatocon?
 	<br>
 	<br>
 	<br>
