--- a/mapping.html
+++ b/mapping.html
@@ -35,6 +35,9 @@
 	<br>
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_growth_chart.png" style="float: left; clear: right; width:800px;" />
 	<br>
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_by_state_2000.png" style="float: left; clear: right; width:800px;" />
+	<br>
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_by_state_2019.png" style="float: left; clear: right; width:800px;" />
 	<br>
 	<br>
 	<br>
