--- a/mapping.html
+++ b/mapping.html
@@ -37,7 +37,12 @@
 	<br>
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_by_state_2000.png" style="float: left; clear: right; width:800px;" />
 	<br>
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_by_state_2018.png" style="float: left; clear: right; width:800px;" />
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_by_state_2018.png" style="left; width:800px;" />
 	<br>
 	<br>
 	<br>
