--- a/mapping.html
+++ b/mapping.html
@@ -21,9 +21,15 @@
 <div class="container"><a class="navbar-brand" href="#">American Conventions</a><button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"></button>
 <div class="collapse navbar-collapse" id="navbarResponsive">
 <ul class="navbar-nav ml-auto">
-	<li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span> </a></li>
-	<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-	<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>    
+	   <li class="nav-item">
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/index">Home</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/Introduction">Introduction</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://fandinod.github.io/americanconventions/contact">Contact</a>
+          </li>  
 </ul>
 </div>
 </div>
