--- a/introduction.html
+++ b/introduction.html
@@ -110,6 +110,13 @@
 		<p>All photos on this site are by the author unless otherwise attributed.</p>
 		<p>Scans of convention guides</p>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
+	
+  <a class="twitter-timeline"
+  href="https://twitter.com/danfandino"
+  data-width="300"
+  data-height="300">
+  Tweets by @danfandino
+  </a>
 
 </header>        
 
