--- a/introduction.html
+++ b/introduction.html
@@ -111,6 +111,8 @@
 		<p>Scans of convention guides</p>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 	
+	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
   <a class="twitter-timeline"
   href="https://twitter.com/danfandino"
   data-width="300"
