--- a/introduction.html
+++ b/introduction.html
@@ -104,21 +104,18 @@
 
 <img src="http://tokyo6420.com/images/CHI1.jpg" hspace="20" style="float: left; width:200px;" />
 
-		<p>Daniel Fandino is a history PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture, digital humanities and technology.  He is one of the editors of <i>Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains</i>. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume <i>Virtual Dark Tourism: Ghost Roads</i>.</p>
-		<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University.</> 
+		<p>Daniel Fandino is a history PhD student at Michigan State University. His academic interests focus on the relationship between the United States and Japan, American and East Asian popular culture, digital humanities and technology.  He is one of the editors of <i>Assembling the Marvel Cinematic Universe: Essays on the Social, Cultural and Geopolitical Domains</i>. His most recent academic work is a chapter entitled “Remembering Fictional History and Virtual War in Eve Online” in the edited volume <i>Virtual Dark Tourism: Ghost Roads</i>.
+		He writes about popular culture, digital humanities, and history at Journey to the Wired West.</p>
+		<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University. </> 
 		<br>
 		<p>All photos on this site are by the author unless otherwise attributed.</p>
 		<p>Scans of convention guides</p>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 	
+	<p>Social Media</p>
+	
 	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
-  <a class="twitter-timeline"
-  href="https://twitter.com/danfandino"
-  data-width="300"
-  data-height="300">
-  Tweets by @danfandino
-  </a>
 
 </header>        
 
