--- a/introduction.html
+++ b/introduction.html
@@ -113,7 +113,11 @@
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 	
 	<p>Social Media</p>
-	
+	<a class="twitter-timeline"
+  href="https://twitter.com/TwitterDev"
+  data-tweet-limit="3">
+Tweets by @TwitterDev
+</a>
 	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
 
