--- a/introduction.html
+++ b/introduction.html
@@ -118,7 +118,7 @@
   data-tweet-limit="3">
 Tweets by @TwitterDev
 </a>
-	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @danfandino</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
 
 </header>        
