--- a/introduction.html
+++ b/introduction.html
@@ -111,11 +111,11 @@
 		<p>All photos on this site are by the author unless otherwise attributed.</p>
 		<p>Scans of convention guides</p>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
-	
-	<p>Social Media</p>
-	<a class="twitter-timeline"
-  href="https://twitter.com/TwitterDev"
-  data-tweet-limit="3">
+
+<a class="twitter-timeline"
+  href="https://twitter.com/danfandino"
+  data-width="300"
+  data-height="300">
 Tweets by @TwitterDev
 </a>
 	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @danfandino</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
