--- a/introduction.html
+++ b/introduction.html
@@ -112,7 +112,9 @@
 		<p>Scans of convention guides</p>
 		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 
-<a class="twitter-timeline"
+<h1 class="display-5">Social Media</h1>
+	
+	<a class="twitter-timeline"
   href="https://twitter.com/danfandino"
   data-width="300"
   data-height="300">
