--- a/introduction.html
+++ b/introduction.html
@@ -108,9 +108,7 @@
 		He writes about popular culture, digital humanities, and history at Journey to the Wired West.</p>
 		<p>This project as part of the 2019 Cultural Heritage Informatics Fellowship at Michigan State University. </> 
 		<br>
-		<p>All photos on this site are by the author unless otherwise attributed.</p>
-		<p>Scans of convention guides</p>
-		<p>The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
+		<p>All photos on this site are by the author unless otherwise attributed. The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 
 <h1 class="display-5">Social Media</h1>
 	
