--- a/introduction.html
+++ b/introduction.html
@@ -44,52 +44,13 @@
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
 	
-		What is a convention? Yamatocon?
+		
+
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-		<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>	
 
 
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_guide_cover.png" style="width:300px;" />
+
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_guide_cover.png" style="float: left; width:300px;" />
 	
 
 	
