--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
   <div class="container">
     
      <!--  -->
-    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. For an overview of the project, visit Introduction. Click on the map below to learn more about a convention. </p>
+
 
     <!-- Jumbotron Header -->
    
     <header class="py-1 bg-dark">
 
-      <p class="m-0 text-center text-white"> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
+      <p class="m-0 text-center text-white"> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. For an overview of the project, visit Introduction. Click on the map below to learn more about a convention. </p>
 </p>
 </header>
  
