--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <p class="m-0 text-center text-white"> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. 
         <br>
-        Click on the map below to learn more about a convention. </p>
+        Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
 </header>
  
 
