--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
    
 <header class="py-1 bg-dark">
 
-      <p class="m-0 text-center text-white"> American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. </p>
-        <br>
-        <p>Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
+      <p class="m-0 text-center text-white">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.
+                                            Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
 </header>
  
 
