--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <!-- Page Content -->
   <div class="container">
     
-     <!--  -->
+     <!--自分が好きじゃないの-->
 
 
     <!-- Jumbotron Header -->
