--- a/index.html
+++ b/index.html
@@ -86,17 +86,20 @@
 
     <!-- Jumbotron Header -->
    
-<header class="py-1 bg-dark">
-      <p class="m-0 text-center text-white">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.
+
+    <!--自分が好きじゃないの--><header class="py-1 bg-dark">
+    
+    <!--自分が好きじゃないの-->  <p class="m-0 text-center text-white">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.
                                             Click on the map below to learn more about a convention. For an overview of the project, visit Introduction in the top menu.</p>
-</header>
+
+    <!--自分が好きじゃないの--></header>
  
 
     <!-- Page Features -->
     
     <!-- The following is Mapbox code -->
 
-<div id='map' style='width: 1110px; height: 500px; top: 20px; bottom: 20px'></div>
+<div id='map' style='width: 1110px; height: 500px; top: 0px; bottom: 20px'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZmFuZGlub2QiLCJhIjoiY2o4cTMwZG04MG5rZjJxcXVqZ3c5bnVsbyJ9.VtyB1YxPfiTAH6JaSH-5XQ';
