--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
   <div class="container">
     
      <!--自分が好きじゃないの-->
-    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States. For an overview of the project, visit Introduction. Click on the map below to learn more about a convention. </p>
+    <p class="lead">American Conventions is a digital project examining the history and cultural legacy of anime conventions in the United States.<br>
+                    Acting as sites of , anime conventions. <br>
+                    For an overview of the project, visit Introduction. Click on the map below to learn more about a convention.</p>
 
 
     <!-- Jumbotron Header -->
