--- a/introduction.html
+++ b/introduction.html
@@ -34,7 +34,13 @@
 </ul>
 </div>
 </div>
-</nav>	
+</nav>
+	div {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
 	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
@@ -86,7 +92,7 @@ Tweets by @TwitterDev
 	<br>
 	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @danfandino</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
-
+	</div>
 </header>        
 
 <footer class="py-1 bg-dark">
