--- a/introduction.html
+++ b/introduction.html
@@ -35,17 +35,15 @@
 </div>
 </div>
 </nav>
-	div {
-  padding-top: 50px;
-  padding-right: 30px;
-  padding-bottom: 50px;
-  padding-left: 80px;
-}
+
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
 	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
 		Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings already extant in the United States and introducing new concepts springing from the particular needs and interests of anime fandom. This included a bend towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay.
 	<br>
+	<p>Although the first acknowledged mainstream anime convention in the United States is A-Kon in 1990, smaller fan-run events took place throughout the 1980s, including Yamato-con in 1983.
+	   In the digital age of online resellers and streaming video, it maybe be difficult to realize that a short 30 years ago conventions were often the most viable means of buying merchandise from Japan or watching
+	   a brand new (or even not so new) anime series. The video room and dealer's room were . 	
 <!--Timeline JS-->
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
@@ -59,6 +57,7 @@
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_guide_cover.png" style="float: left; width:300px;" />
 	
 	<p>Popular culture is often conceived as disposable, often only rising to public attention when monetary value is attached to popular culture objects such as the recent interest in superhero comics. Yet the basis of modern fandom was built in the halls of early conventions. Like in the early internet, identities are negotiated, fans engaged with each other, knowledge exchanged, all under the banner of a imagined Japan. This process has not been chronicled or archived in a systematic manner.</p> 
+	<p>The upswing in interest in Japan also coincided with the nadir of U.S. - Japan relations since the end of World War II. 
 <br>
 <p>George Lipsitz notes that contemporary social historians turn to popular culture to broaden the archive of available evidence. As Donald Lowe argues, history is not the past but rather a representation of the past.</p> 
 
