--- a/introduction.html
+++ b/introduction.html
@@ -42,8 +42,14 @@
 		Certain conventions of the convention evolved over time, borrowing from the structure of the science fiction and trade meetings already extant in the United States and introducing new concepts springing from the particular needs and interests of anime fandom. This included a bend towards the exploration of the culture of Japan and a heavier emphasis on costume play, or cosplay.
 	<br>
 	<p>Although the first acknowledged mainstream anime convention in the United States is A-Kon in 1990, smaller fan-run events took place throughout the 1980s, including Yamato-con in 1983.
-	   In the digital age of online resellers and streaming video, it maybe be difficult to realize that a short 30 years ago conventions were often the most viable means of buying merchandise from Japan or watching
-	   a brand new (or even not so new) anime series. The video room and dealer's room were . 	
+	   In the digital age of online resellers and streaming video, it may be difficult to realize that a short 30 years ago conventions were often the most viable means of buying merchandise from Japan or watching
+	   a brand new (or even not so new) anime series. The video room and dealer's room were often the only means for fans to acquire any form of merchandise from their favorite series. 
+	   Panels also. Interest in Japan was often connected to an interest in Japanese cultural products, so panels often included sessions on the basics of the Japanese language, food, clothing such as kimono, and art styles including calligraphy and ikebana.
+	   Anime fandom was a relatively niche fandom in due to the difficulty of acquiring the product, the language barrier, and the need for specialized--and at first expensive--equipment in the form of a video cassette player.	
+	   	
+	   	
+		<br>
+	    Equally important to 	
 <!--Timeline JS-->
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1q2RWonnVzOwFdIk_g1wrdhys_OtFpLk1FcB7g78jucY&font=Default&lang=en&initial_zoom=2&height=450' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 <!--Timeline JS-->
