--- a/introduction.html
+++ b/introduction.html
@@ -55,7 +55,7 @@
 <!--Timeline JS-->
 <h1 class="display-5">Why Study Conventions</h1>
 
-	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_guide_cover.png" hpspace="20" style="float: left; width:300px;" />
+	<img src="https://fandinod.github.io/americanconventions/IMG/con_anime_boston_guide_cover.png" hspace="20" style="float: left; width:300px;" />
 	
 	<p>Popular culture is often conceived as disposable, often only rising to public attention when monetary value is attached to popular culture objects such as the recent interest in superhero comics. Yet the basis of modern fandom was built in the halls of early conventions. Like in the early internet, identities are negotiated, fans engaged with each other, knowledge exchanged, all under the banner of a imagined Japan. This process has not been chronicled or archived in a systematic manner.</p> 
 	<p>The upswing in interest in Japan also coincided with the nadir of U.S. - Japan relations since the end of World War II. While programs such as Space Battleship Yamato (宇宙戦艦ヤマト) were
