--- a/introduction.html
+++ b/introduction.html
@@ -35,7 +35,7 @@
 </div>
 </div>
 </nav>
-<div class="px-3 bg-primary">
+<div class="px-3">
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
 	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
