--- a/akon.html
+++ b/akon.html
@@ -36,12 +36,8 @@
 </div>
 </nav>	
 <!-- Page Content -->
-	<h1 class="display-5">Introduction to the American Conventions project</h1>
-	$('.multiple-items').slick({
-  infinite: true,
-  slidesToShow: 3,
-  slidesToScroll: 3
-});
+	<h1 class="display-5">Project A-kon</h1>
+
 	
 <!-- Page Content -->
 <div class="container">
