--- a/introduction.html
+++ b/introduction.html
@@ -77,7 +77,7 @@ The 1980s were highly uncertain years when a new post-modern, post-American orde
 		<br>
 		<p>All photos on this site are by the author unless otherwise attributed. The icon used on maps in this site is fuji by Claudio Gomboli from the Noun Project</p>
 		<p>Special thanks to Ethan Watrall, Brandon Locke, and Erica Holt for their expertise and support. A conceptual debt is owed to Erin Bush for her digital article “Attracted by the Khaki” 
-                   War Camps and Wayward Girls in Virginia, 1918–1920 by Erin Bush and Tara Robertson for the blog post "digitization: just because you can, doesn’t mean you should"</p>
+                   War Camps and Wayward Girls in Virginia, 1918–1920 by and Tara Robertson for the blog post "digitization: just because you can, doesn’t mean you should"</p>
 
 <h1 class="display-5">Social Media</h1>
 	
