--- a/introduction.html
+++ b/introduction.html
@@ -36,6 +36,7 @@
 </div>
 </nav>
 <div class="px-10">
+	<div id="page-wrap">
 <!-- Page Content -->
 	<h1 class="display-5">Introduction to the American Conventions project</h1>
 	<p>Conventions have become a mainstay of modern fandom, enabling fans to directly connect with the producers of popular culture. This project focuses on 1990 to 2000, the heady pre-internet days where conventions offered a liminal space for fans to interact with like-minded individuals over shared interests. 
@@ -90,6 +91,7 @@ Tweets by @TwitterDev
 	<br>
 	<a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @danfandino</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	
+	</div>
 	</div>
 	</div>
 </header>        
