--- a/mapping.html
+++ b/mapping.html
@@ -35,6 +35,7 @@
 </div>
 </nav>	
 <!-- Page Content -->
+	<div id="page-wrap">
 	<h1 class="display-5">Mapping Fandom</h1>
 	
 	<img src="https://fandinod.github.io/americanconventions/IMG/con_attend_graph.png" style="float: left; clear: right; width:800px;" />
@@ -93,7 +94,7 @@
 
 
 	
-
+	</div>
 </header>        
 
 <footer class="py-1 bg-dark">
