--- a/akon.html
+++ b/akon.html
@@ -34,6 +34,8 @@
 </ul>
 </div>
 </div>
+	<div class="px-10">
+	<div id="page-wrap">
 </nav>	
 <!-- Page Content -->
 	<h1 class="display-5">Project A-kon</h1>
@@ -111,6 +113,8 @@
   </div>
 
 </div>
+	</div>
+	</div>
 <!-- /.container -->	
 
 <footer class="py-1 bg-dark">
