--- a/afo.html
+++ b/afo.html
@@ -39,7 +39,7 @@
 	
 	<div class="px-10">
 	<div id="page-wrap">
-	<h1 class="display-5">Project A-kon</h1>
+	<h1 class="display-5">Anime Festival Orlando</h1>
 
 	
 <!-- Page Content -->
