--- a/akon.html
+++ b/akon.html
@@ -45,7 +45,7 @@
 <!-- Page Content -->
 <div class="container">
 
-  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Thumbnail Gallery</h1>
+  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">A-Kon Archive</h1>
 
   <hr class="mt-2 mb-5">
 
