--- a/afo.html
+++ b/afo.html
@@ -50,12 +50,22 @@ Notable guests at Anime Festival Orlando have included Steve Bennett (Studio Iro
 <br>
 www.animefestivalorlando.com
 </p>
-
+		<br>
+<p>
+	<h1 class="display-5">Anime Festival Orlando</h1>
+	
+	Anime Festival Orlando
+		First year: 1999
+		Type of convention: Hotel based
+		Location: Wyndham Resort, International Drive, Orlando, FL.
+		Attendance: Undisclosed, estimated 3500 in 2016
+		Directors: Karen Trudeau, Erik Reiss
+		</p>
 	
 <!-- Page Content -->
 <div class="container">
 
-  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Thumbnail Gallery</h1>
+  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">AFO Archives</h1>
 
   <hr class="mt-2 mb-5">
 
